--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "devDependencies": {
     "jasmine-node": "~1.5.0",
     "sandboxed-module": "~0.1.4",
-    "istanbul": "~0.1.34"
+    "istanbul": "~0.1.34",
+    "wd": "0.0.32",
+    "joey": "~1.1.0"
   },
   "exclude": [
     "builds"
