Update integration tests and add specific run command

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "main": "optimize.js",
   "scripts": {
-    "test": "istanbul test jasmine-node -- spec"
+    "test": "istanbul test jasmine-node -- spec",
+    "integration": "istanbul test jasmine-node -- --matchall spec/integration.js"
   },
   "dependencies": {
     "montage": "~0.13.0",
